Added display of exposure control mode in mammography detail view (makes sense to display this now that a user can filter on the value). Altered radiographic title to read `Exposure control mode` rather than `Control mode` to better reflect what is being displayed and to make it consistent with the mammography page. Refs issue #861

--- a/openrem/remapp/templates/remapp/dxdetail.html
+++ b/openrem/remapp/templates/remapp/dxdetail.html
@@ -98,7 +98,7 @@
         <th>Exposure Index<br>IEC</th>
         <th>Exposure Index<br>vendor</th>
         <th>DAP<br>(cGy.cm<sup>2</sup>)</th>
-        <th>Control mode</th>
+        <th>Exposure control mode</th>
         <th>Comment</th>
         {% for event in events_all %}
           {% with sourcedata=event.irradeventxraysourcedata_set.get %}
