--- a/openrem/remapp/templates/remapp/mgdetail.html
+++ b/openrem/remapp/templates/remapp/mgdetail.html
@@ -72,7 +72,8 @@
 <table class="table table-striped table-bordered small">
     <th>Time</th>
     <th>Acquisition protocol</th>
-    <th>View</th>
+    <th>Laterality</th>
+    <th>View code</th>
     <th>Compression thickness (mm)</th>
     <th>Target</th>
     <th>Filter</th>
@@ -87,7 +88,8 @@
     <tr>
         <td>{{ event.date_time_started|time:"H:i.s" }}</td>
         <td>{{ event.acquisition_protocol }}</td>
-        <td>{{ event.laterality.code_meaning }} breast, {{ event.image_view.code_meaning }}</td>
+        <td>{{ event.laterality.code_meaning }}</td>
+        <td>{{ event.image_view.code_meaning }}</td>
         <td>{{ event.irradeventxraymechanicaldata_set.get.compression_thickness|floatformat:0  }}</td>
         <td>{{ source_data.anode_target_material.code_meaning }}</td>
         <td>{{ source_data.xrayfilters_set.get.xray_filter_material.code_meaning }}</td>
@@ -99,7 +101,7 @@
         <td>{{ source_data.exposure_control_mode }}</td>
     </tr>
     <tr>
-        <td colspan = "12"><small> <strong>Exposure Control Mode Description:</strong>{{ event.comment }} </small></td>
+        <td colspan = "13"><small> <strong>Exposure Control Mode Description:</strong>{{ event.comment }} </small></td>
     </tr>
       {%  endwith %}
     {% endfor %}
