--- a/openrem/remapp/templates/remapp/rfdetail.html
+++ b/openrem/remapp/templates/remapp/rfdetail.html
@@ -63,7 +63,13 @@
                 <li>Test patient indicators? {{ study.patientmoduleattr_set.get.not_patient_indicator }}</li>
                 <li style="list-style-type: none;">
                     <table class="table table-condensed table-bordered small">
-                        <th>Irradiation type</th><th>Total DAP (cGy.cm<sup>2</sup>)</th><th>Total dose at RP (Gy)</th><th>Total duration (s)</th>
+                        <caption>Total DAP, dose at reference point and exposure duration for each irradiation type</caption>
+                        <tr>
+                          <th scope="col">Irradiation type</th>
+                          <th scope="col">Total DAP (cGy.cm<sup>2</sup>)</th>
+                          <th scope="col">Total dose at RP (Gy)</th>
+                          <th scope="col">Total duration (s)</th>
+                        </tr>
                         {% for irr_type in study_totals %}
                             <tr>
                             {% if '- ' in irr_type.0 %}
@@ -121,13 +127,14 @@
                         </ul>
 
                         <table class="table table-condensed table-bordered small table-indent">
+                            <caption>Summary of examinations on this patient over the specified time period</caption>
                             <tr>
-                                <th>Date</th>
-                                <th>Time</th>
-                                <th>Accession number</th>
-                                <th>Total DAP (cGy.cm<sup>2</sup>)</th>
-                                <th>Total dose at RP (Gy)</th>
-                                <th>OpenREM link</th>
+                                <th scope="col">Date</th>
+                                <th scope="col">Time</th>
+                                <th scope="col">Accession number</th>
+                                <th scope="col">Total DAP (cGy.cm<sup>2</sup>)</th>
+                                <th scope="col">Total dose at RP (Gy)</th>
+                                <th scope="col">OpenREM link</th>
                             </tr>
                             {% for each_study in studies_in_week_delta %}
                                 <tr>
@@ -219,6 +226,7 @@
                 <div class="colour_scale_selection table-bordered" id="colour_scale_selection">
                     <form id="colour_scale_form" onsubmit="useNewColourScale(this, skinDoseMapObj, skinDoseMapColourScaleObj, skinDoseMap3dObj, show3dSkinDoseMap); return false;">
                         <table>
+                            <caption>Skin dose map colour scale selection</caption>
                             <tr>
                                 <td colspan="2" class="centred">Colour scale choice</td>
                             </tr>
@@ -309,6 +317,7 @@
 
             <div id="skin_map_wwwl_controls">
                 <table>
+                    <caption>Skin dose map window width and level controls</caption>
                     <tr>
                         <td><input type="button" onclick="reset(skinDoseMapObj, skinDoseMapColourScaleObj, skinDoseMap3dObj, show3dSkinDoseMap, skinDoseMap3dPersonObj)" value="Reset controls" class="btn btn-default btn-sm btn-block" role="button" /></td>
                         <td style="padding-right: 20px"><a onclick="$('#skin_map_maxmin_controls').show();$('#skin_map_wwwl_controls').hide();" class="btn btn-default btn-sm btn-block" role="button">Use max/min</a></td>
@@ -326,6 +335,7 @@
 
             <div id="skin_map_maxmin_controls">
                 <table>
+                    <caption>Skin dose map maximum and minimum dose value controls</caption>
                     <tr>
                         <td><input type="button" onclick="reset(skinDoseMapObj, skinDoseMapColourScaleObj, skinDoseMap3dObj, show3dSkinDoseMap, skinDoseMap3dPersonObj)" value="Reset controls" class="btn btn-default btn-sm btn-block" role="button" /></td>
                         <td style="padding-right: 20px"><a onclick="$('#skin_map_maxmin_controls').hide();$('#skin_map_wwwl_controls').show();" class="btn btn-default btn-sm btn-block" role="button">Use WW/WL</a></td>
@@ -419,24 +429,25 @@
     </div>
 <h2>Radiation event details for this study</h2>
 <table class="table table-striped table-bordered small sortable">
-  <th>Time</th>
-  <th>Acquisition protocol</th>
-  <th>Event type</th>
-  <th>Pulse rate <span style="white-space:nowrap">(s<sup>-1</sup>)</span></th>
-  <th>Plane</th>
-  <th>DAP (cGy.cm<sup>2</sup>)</th>
-  <th>Dose at reference point (mGy)</th>
-  <th>Duration (ms)<br>
+  <caption>Exposure details for each acquisition contained in the study</caption>
+  <th scope="col">Time</th>
+  <th scope="col">Acquisition protocol</th>
+  <th scope="col">Event type</th>
+  <th scope="col">Pulse rate <span style="white-space:nowrap">(s<sup>-1</sup>)</span></th>
+  <th scope="col">Plane</th>
+  <th scope="col">DAP (cGy.cm<sup>2</sup>)</th>
+  <th scope="col">Dose at reference point (mGy)</th>
+  <th scope="col">Duration (ms)<br>
       Exposure time (ms)
   </th>
-  <th>kVp</th>
-  <th>mA</th>
-  <th>Filters (mm)</th>
-  <th>Primary angle (&deg;)</th>
-  <th>Secondary angle (&deg;)</th>
-  <th>Detector size (mm)</th>
-  <th>SDD (mm)</th>
-  <th>Orientation</th>
+  <th scope="col">kVp</th>
+  <th scope="col">mA</th>
+  <th scope="col">Filters (mm)</th>
+  <th scope="col">Primary angle (&deg;)</th>
+  <th scope="col">Secondary angle (&deg;)</th>
+  <th scope="col">Detector size (mm)</th>
+  <th scope="col">SDD (mm)</th>
+  <th scope="col">Orientation</th>
     {% for event in events_all %}
       {% with sourcedata=event.irradeventxraysourcedata_set.get %}
         {% with mechanicaldata=event.irradeventxraymechanicaldata_set.get %}
