--- a/openrem/remapp/templates/remapp/ctdetail.html
+++ b/openrem/remapp/templates/remapp/ctdetail.html
@@ -41,7 +41,7 @@
 <div class="row">
   <div class="col-md-3">
     <table class="table table-condensed table-bordered small">
-      <caption>Total number of events and DLP in the study</caption>
+      <caption class="hidden">Total number of events and DLP in the study</caption>
       <tr>
         <th scope="col">Total number of events</th>
         <td>{{ accum_dose.total_number_of_irradiation_events }}</td>
@@ -55,7 +55,7 @@
 </div>
 
 <table class="table table-striped table-bordered small">
-    <caption>Exposure details for each acquisition contained in the study</caption>
+    <caption class="hidden">Exposure details for each acquisition contained in the study</caption>
     <th scope="col">Acquisition protocol</th>
     <th scope="col">Type</th>
     <th scope="col">CTDI<sub>vol</sub> (mGy)</th>
