--- a/openrem/remapp/templates/remapp/dxdetail.html
+++ b/openrem/remapp/templates/remapp/dxdetail.html
@@ -42,7 +42,7 @@
       <div class="row">
         <div class="col-md-3">
           <table class="table table-condensed table-bordered small">
-            <caption>Total number of events and DAP in the study</caption>
+            <caption class="hidden">Total number of events and DAP in the study</caption>
             <tr>
               <th scope="col">Total number of events</th>
               <td>
@@ -82,7 +82,7 @@
       </div>
 
       <table class="table table-striped table-bordered small">
-        <caption>Exposure details for each acquisition contained in the study</caption>
+        <caption class="hidden">Exposure details for each acquisition contained in the study</caption>
         <th scope="col">Time</th>
         <th scope="col">Acquisition protocol</th>
         <th scope="col">
