--- a/openrem/remapp/templates/remapp/mgdetail.html
+++ b/openrem/remapp/templates/remapp/mgdetail.html
@@ -46,7 +46,7 @@
 <div class="row">
   <div class="col-md-3">
     <table class="table table-condensed table-bordered small">
-      <caption>Total number of events and accumulated average glandular dose in the study</caption>
+      <caption class="hidden">Total number of events and accumulated average glandular dose in the study</caption>
       <tr>
         <th scope="col">Total number of events</th>
         <td>{{ events_all|length }}</td>
@@ -75,7 +75,7 @@
 
 
 <table class="table table-striped table-bordered small sortable">
-    <caption>Exposure details for each acquisition contained in the study</caption>
+    <caption class="hidden">Exposure details for each acquisition contained in the study</caption>
     <th scope="col">Time</th>
     <th scope="col">Acquisition protocol</th>
     <th scope="col">Laterality</th>
