--- a/openrem/remapp/templates/remapp/rfdetail.html
+++ b/openrem/remapp/templates/remapp/rfdetail.html
@@ -63,7 +63,7 @@
                 <li>Test patient indicators? {{ study.patientmoduleattr_set.get.not_patient_indicator }}</li>
                 <li style="list-style-type: none;">
                     <table class="table table-condensed table-bordered small">
-                        <caption>Total DAP, dose at reference point and exposure duration for each irradiation type</caption>
+                        <caption class="hidden">Total DAP, dose at reference point and exposure duration for each irradiation type</caption>
                         <tr>
                           <th scope="col">Irradiation type</th>
                           <th scope="col">Total DAP (cGy.cm<sup>2</sup>)</th>
@@ -127,7 +127,7 @@
                         </ul>
 
                         <table class="table table-condensed table-bordered small table-indent">
-                            <caption>Summary of examinations on this patient over the specified time period</caption>
+                            <caption class="hidden">Summary of examinations on this patient over the specified time period</caption>
                             <tr>
                                 <th scope="col">Date</th>
                                 <th scope="col">Time</th>
@@ -226,9 +226,9 @@
                 <div class="colour_scale_selection table-bordered" id="colour_scale_selection">
                     <form id="colour_scale_form" onsubmit="useNewColourScale(this, skinDoseMapObj, skinDoseMapColourScaleObj, skinDoseMap3dObj, show3dSkinDoseMap); return false;">
                         <table>
-                            <caption>Skin dose map colour scale selection</caption>
+                            <caption class="hidden">Skin dose map colour scale selection</caption>
                             <tr>
-                                <td colspan="2" class="centred">Colour scale choice</td>
+                                <th colspan="2" class="centred" scope="colgroup">Colour scale choice</th>
                             </tr>
                             <tr>
                                 <td><input type="radio" title="colour_choice" name="colour_choice" value="OrRd"></td>
@@ -317,7 +317,7 @@
 
             <div id="skin_map_wwwl_controls">
                 <table>
-                    <caption>Skin dose map window width and level controls</caption>
+                    <caption class="hidden">Skin dose map window width and level controls</caption>
                     <tr>
                         <td><input type="button" onclick="reset(skinDoseMapObj, skinDoseMapColourScaleObj, skinDoseMap3dObj, show3dSkinDoseMap, skinDoseMap3dPersonObj)" value="Reset controls" class="btn btn-default btn-sm btn-block" role="button" /></td>
                         <td style="padding-right: 20px"><a onclick="$('#skin_map_maxmin_controls').show();$('#skin_map_wwwl_controls').hide();" class="btn btn-default btn-sm btn-block" role="button">Use max/min</a></td>
@@ -335,7 +335,7 @@
 
             <div id="skin_map_maxmin_controls">
                 <table>
-                    <caption>Skin dose map maximum and minimum dose value controls</caption>
+                    <caption class="hidden">Skin dose map maximum and minimum dose value controls</caption>
                     <tr>
                         <td><input type="button" onclick="reset(skinDoseMapObj, skinDoseMapColourScaleObj, skinDoseMap3dObj, show3dSkinDoseMap, skinDoseMap3dPersonObj)" value="Reset controls" class="btn btn-default btn-sm btn-block" role="button" /></td>
                         <td style="padding-right: 20px"><a onclick="$('#skin_map_maxmin_controls').hide();$('#skin_map_wwwl_controls').show();" class="btn btn-default btn-sm btn-block" role="button">Use WW/WL</a></td>
@@ -429,7 +429,7 @@
     </div>
 <h2>Radiation event details for this study</h2>
 <table class="table table-striped table-bordered small sortable">
-  <caption>Exposure details for each acquisition contained in the study</caption>
+  <caption class="hidden">Exposure details for each acquisition contained in the study</caption>
   <th scope="col">Time</th>
   <th scope="col">Acquisition protocol</th>
   <th scope="col">Event type</th>
