--- a/openrem/remapp/templates/remapp/ctdetail.html
+++ b/openrem/remapp/templates/remapp/ctdetail.html
@@ -40,8 +40,7 @@
   </ul>
 <div class="row">
   <div class="col-md-3">
-    <table class="table table-condensed table-bordered small">
-      <caption class="hidden">Total number of events and DLP in the study</caption>
+    <table class="table table-condensed table-bordered small" aria-describedby="Total number of events and DLP in the study">
       <tr>
         <th scope="col">Total number of events</th>
         <td>{{ accum_dose.total_number_of_irradiation_events }}</td>
@@ -54,8 +53,7 @@
   </div>
 </div>
 
-<table class="table table-striped table-bordered small">
-    <caption class="hidden">Exposure details for each acquisition contained in the study</caption>
+<table class="table table-striped table-bordered small" aria-describedby="Exposure details for each acquisition contained in the study">
     <th scope="col">Acquisition protocol</th>
     <th scope="col">Type</th>
     <th scope="col">CTDI<sub>vol</sub> (mGy)</th>
