--- a/openrem/remapp/templates/remapp/dxdetail.html
+++ b/openrem/remapp/templates/remapp/dxdetail.html
@@ -41,8 +41,7 @@
       </ul>
       <div class="row">
         <div class="col-md-3">
-          <table class="table table-condensed table-bordered small">
-            <caption class="hidden">Total number of events and DAP in the study</caption>
+          <table class="table table-condensed table-bordered small" aria-describedby="Total number of events and DAP in the study">
             <tr>
               <th scope="col">Total number of events</th>
               <td>
@@ -81,8 +80,7 @@
         </div>
       </div>
 
-      <table class="table table-striped table-bordered small">
-        <caption class="hidden">Exposure details for each acquisition contained in the study</caption>
+      <table class="table table-striped table-bordered small" aria-describedby="Exposure details for each acquisition contained in the study">
         <th scope="col">Time</th>
         <th scope="col">Acquisition protocol</th>
         <th scope="col">
