--- a/openrem/remapp/templates/remapp/mgdetail.html
+++ b/openrem/remapp/templates/remapp/mgdetail.html
@@ -45,8 +45,7 @@
 </ul>
 <div class="row">
   <div class="col-md-3">
-    <table class="table table-condensed table-bordered small">
-      <caption class="hidden">Total number of events and accumulated average glandular dose in the study</caption>
+    <table class="table table-condensed table-bordered small" aria-describedby="Total number of events and accumulated average glandular dose in the study">
       <tr>
         <th scope="col">Total number of events</th>
         <td>{{ events_all|length }}</td>
@@ -74,8 +73,7 @@
 </div>
 
 
-<table class="table table-striped table-bordered small sortable">
-    <caption class="hidden">Exposure details for each acquisition contained in the study</caption>
+<table class="table table-striped table-bordered small sortable" aria-describedby="Exposure details for each acquisition contained in the study">
     <th scope="col">Time</th>
     <th scope="col">Acquisition protocol</th>
     <th scope="col">Laterality</th>
