--- a/openrem/remapp/templates/remapp/rfdetail.html
+++ b/openrem/remapp/templates/remapp/rfdetail.html
@@ -62,8 +62,7 @@
                 <li>Operator(s): {{ study.operator_name }}</li>
                 <li>Test patient indicators? {{ study.patientmoduleattr_set.get.not_patient_indicator }}</li>
                 <li style="list-style-type: none;">
-                    <table class="table table-condensed table-bordered small">
-                        <caption class="hidden">Total DAP, dose at reference point and exposure duration for each irradiation type</caption>
+                    <table class="table table-condensed table-bordered small" aria-describedby="Total DAP, dose at reference point and exposure duration for each irradiation type">
                         <tr>
                           <th scope="col">Irradiation type</th>
                           <th scope="col">Total DAP (cGy.cm<sup>2</sup>)</th>
@@ -126,8 +125,7 @@
                             {% endwith %}
                         </ul>
 
-                        <table class="table table-condensed table-bordered small table-indent">
-                            <caption class="hidden">Summary of examinations on this patient over the specified time period</caption>
+                        <table class="table table-condensed table-bordered small table-indent" aria-describedby="Summary of examinations on this patient over the specified time period">
                             <tr>
                                 <th scope="col">Date</th>
                                 <th scope="col">Time</th>
@@ -225,8 +223,7 @@
 
                 <div class="colour_scale_selection table-bordered" id="colour_scale_selection">
                     <form id="colour_scale_form" onsubmit="useNewColourScale(this, skinDoseMapObj, skinDoseMapColourScaleObj, skinDoseMap3dObj, show3dSkinDoseMap); return false;">
-                        <table>
-                            <caption class="hidden">Skin dose map colour scale selection</caption>
+                        <table aria-describedby="Skin dose map colour scale selection">
                             <tr>
                                 <th colspan="2" class="centred" scope="colgroup">Colour scale choice</th>
                             </tr>
@@ -316,8 +313,7 @@
             </div>
 
             <div id="skin_map_wwwl_controls">
-                <table>
-                    <caption class="hidden">Skin dose map window width and level controls</caption>
+                <table aria-describedby="Skin dose map window width and level controls">
                     <tr>
                         <td><input type="button" onclick="reset(skinDoseMapObj, skinDoseMapColourScaleObj, skinDoseMap3dObj, show3dSkinDoseMap, skinDoseMap3dPersonObj)" value="Reset controls" class="btn btn-default btn-sm btn-block" role="button" /></td>
                         <td style="padding-right: 20px"><a onclick="$('#skin_map_maxmin_controls').show();$('#skin_map_wwwl_controls').hide();" class="btn btn-default btn-sm btn-block" role="button">Use max/min</a></td>
@@ -334,8 +330,7 @@
             </div>
 
             <div id="skin_map_maxmin_controls">
-                <table>
-                    <caption class="hidden">Skin dose map maximum and minimum dose value controls</caption>
+                <table aria-describedby="Skin dose map maximum and minimum dose value controls">
                     <tr>
                         <td><input type="button" onclick="reset(skinDoseMapObj, skinDoseMapColourScaleObj, skinDoseMap3dObj, show3dSkinDoseMap, skinDoseMap3dPersonObj)" value="Reset controls" class="btn btn-default btn-sm btn-block" role="button" /></td>
                         <td style="padding-right: 20px"><a onclick="$('#skin_map_maxmin_controls').hide();$('#skin_map_wwwl_controls').show();" class="btn btn-default btn-sm btn-block" role="button">Use WW/WL</a></td>
@@ -428,8 +423,7 @@
 
     </div>
 <h2>Radiation event details for this study</h2>
-<table class="table table-striped table-bordered small sortable">
-  <caption class="hidden">Exposure details for each acquisition contained in the study</caption>
+<table class="table table-striped table-bordered small sortable" aria-describedby="Exposure details for each acquisition contained in the study">
   <th scope="col">Time</th>
   <th scope="col">Acquisition protocol</th>
   <th scope="col">Event type</th>
