--- a/openrem/remapp/templates/remapp/mgfiltered.html
+++ b/openrem/remapp/templates/remapp/mgfiltered.html
@@ -84,7 +84,7 @@
                 <h3 class="panel-title">Chart options</h3>
             </div>
             <div class="panel-body">
-                <table>
+                <table aria-describedby="Mammography chart options">
                     {% csrf_token %}
                     {{ chartOptionsForm }}
                 </table>
@@ -94,7 +94,7 @@
                 <h3 class="panel-title">Table options</h3>
             </div>
             <div class="panel-body">
-                <table>
+                <table aria-describedby="Number of rows per page option">
                     {{ itemsPerPageForm }}
                 </table>
                 <input class="btn btn-default" name="submit" type="submit" />
@@ -110,29 +110,29 @@
 {% block col1 %}
 
 
-    <table class="table table-bordered table-hover row-clickable small">
+    <table class="table table-bordered table-hover row-clickable small" aria-describedby="Study summary table">
         <tr>
-            <th>Institution</th>
-            <th>
-                <table>
+            <th scope="col">Institution</th>
+            <th scope="col">
+                <table aria-describedby="Make, model and display name">
                     <tr><td>Make</td></tr>
                     <tr><td>Model</td></tr>
                     <tr><td class="nowrap">Display name</td></tr>
                 </table>
             </th>
-            <th>Date</th>
-            <th>
-                <table>
+            <th scope="col">Date</th>
+            <th scope="col">
+                <table aria-describedby="Study description, procedure, requested procedure and accession number">
                     <tr><td class="nowrap">Study description</td></tr>
                     <tr><td class="nowrap">Procedure</td></tr>
                     <tr><td class="nowrap">Requested Procedure</td></tr>
                     <tr><td class="nowrap">Accession number</td></tr>
                 </table>
             </th>
-            <th>Number of events</th>
-            <th>Accumulated AGD (mGy)</th>
+            <th scope="col">Number of events</th>
+            <th scope="col">Accumulated AGD (mGy)</th>
             {% if admin.admingroup %}
-            <th>Delete?</th>
+            <th scope="col">Delete?</th>
             {% endif %}
         </tr>
         {% for exam in study_list %}
@@ -147,7 +147,7 @@
             </td>
             <td>
                 <a href="{% url 'mg_detail_view' pk=exam.id %}">
-                    <table onclick="window.location='{% url 'mg_detail_view' pk=exam.id %}';">
+                    <table onclick="window.location='{% url 'mg_detail_view' pk=exam.id %}';" aria-describedby="Manufacturer, model and display name">
                         <tr><td class="nowrap">{{ equipment.manufacturer }}</td></tr>
                         <tr><td class="nowrap">{{ equipment.manufacturer_model_name }}</td></tr>
                         <tr><td class="nowrap">{{ equipment.unique_equipment_name.display_name }}</td></tr>
@@ -161,7 +161,7 @@
             </td>
             <td>
                 <a href="{% url 'mg_detail_view' pk=exam.id %}">
-                    <table onclick="window.location='{% url 'mg_detail_view' pk=exam.id %}';">
+                    <table onclick="window.location='{% url 'mg_detail_view' pk=exam.id %}';" aria-describedby="Study description, procedure and requested procedure name">
                         <tr><td class="nowrap">{{ exam.study_description }}</td></tr>
                         <tr><td class="nowrap">{{ exam.procedure_code_meaning }}</td></tr>
                         <tr><td class="nowrap">{{ exam.requested_procedure_code_meaning }}</td></tr>
