--- a/openrem/remapp/templates/remapp/rffiltered.html
+++ b/openrem/remapp/templates/remapp/rffiltered.html
@@ -85,7 +85,7 @@
                 <h3 class="panel-title">Chart options</h3>
             </div>
             <div class="panel-body">
-                <table>
+                <table aria-describedby="Fluoroscopy chart options">
                     {% csrf_token %}
                     {{ chartOptionsForm }}
                 </table>
@@ -95,7 +95,7 @@
                 <h3 class="panel-title">Table options</h3>
             </div>
             <div class="panel-body">
-                <table>
+                <table aria-describedby="Number of rows per page option">
                     {{ itemsPerPageForm }}
                 </table>
                 <input class="btn btn-default" name="submit" type="submit" />
@@ -112,36 +112,36 @@
 {% block col1 %}
 {% load l10n %}
 
-    <table class="table table-bordered table-hover row-clickable small">
+    <table class="table table-bordered table-hover row-clickable small" aria-describedby="Study summary table">
         <tr>
-            <th>Institution</th>
-            <th>
-                <table>
+            <th scope="col">Institution</th>
+            <th scope="col">
+                <table aria-describedby="Make, model and display name">
                     <tr><td>Make</td></tr>
                     <tr><td>Model</td></tr>
                     <tr><td class="nowrap">Display name</td></tr>
                 </table>
             </th>
-            <th>Date</th>
-            <th>
-                <table>
+            <th scope="col">Date</th>
+            <th scope="col">
+                <table aria-describedby="Study description, procedure, requested procedure and accession number">
                     <tr><td class="nowrap">Study description</td></tr>
                     <tr><td class="nowrap">Procedure</td></tr>
                     <tr><td class="nowrap">Requested Procedure</td></tr>
                     <tr><td class="nowrap">Accession number</td></tr>
                 </table>
             </th>
-            <th>Number of events</th>
-            <th>Total DAP (cGy.cm<sup>2</sup>)</th>
-            <th>Total dose at RP (Gy)</th>
+            <th scope="col">Number of events</th>
+            <th scope="col">Total DAP (cGy.cm<sup>2</sup>)</th>
+            <th scope="col">Total dose at RP (Gy)</th>
             {% if alertLevels.show_accum_dose_over_delta_weeks %}
-                <th>Total DAP summed over <br>{{ alertLevels.accum_dose_delta_weeks }} weeks before study(cGy.cm<sup>2</sup>)</th>
-                <th>Total dose at RP summed over <br>{{ alertLevels.accum_dose_delta_weeks }} weeks before study (Gy)</th>
+                <th scope="col">Total DAP summed over <br>{{ alertLevels.accum_dose_delta_weeks }} weeks before study(cGy.cm<sup>2</sup>)</th>
+                <th scope="col">Total dose at RP summed over <br>{{ alertLevels.accum_dose_delta_weeks }} weeks before study (Gy)</th>
             {% endif %}
 
-            <th>Physician</th>
+            <th scope="col">Physician</th>
             {% if admin.admingroup %}
-            <th>Delete?</th>
+            <th scope="col">Delete?</th>
             {% endif %}
         </tr>
         {% for exam in study_list %}
@@ -177,7 +177,7 @@
             </td>
             <td>
                 <a href="{% url 'rf_detail_view' pk=exam.id %}">
-                    <table onclick="window.location='{% url 'rf_detail_view' pk=exam.id %}';">
+                    <table onclick="window.location='{% url 'rf_detail_view' pk=exam.id %}';" aria-describedby="Manufacturer, model and display name">
                         <tr><td class="nowrap">{{ equipment.manufacturer }}</td></tr>
                         <tr><td class="nowrap">{{ equipment.manufacturer_model_name }}</td></tr>
                         <tr><td class="nowrap">{{ equipment.unique_equipment_name.display_name }}</td></tr>
@@ -191,7 +191,7 @@
             </td>
             <td>
                 <a href="{% url 'rf_detail_view' pk=exam.id %}">
-                    <table onclick="window.location='{% url 'rf_detail_view' pk=exam.id %}';">
+                    <table onclick="window.location='{% url 'rf_detail_view' pk=exam.id %}';" aria-describedby="Study description, procedure and requested procedure name">
                         <tr><td class="nowrap">{{ exam.study_description }}</td></tr>
                         <tr><td class="nowrap">{{ exam.procedure_code_meaning }}</td></tr>
                         <tr><td class="nowrap">{{ exam.requested_procedure_code_meaning }}</td></tr>
