--- a/openrem/remapp/templates/remapp/study_confirm_delete.html
+++ b/openrem/remapp/templates/remapp/study_confirm_delete.html
@@ -5,16 +5,16 @@
 
 <form method="post">{% csrf_token %}
 
-<table class="table table-striped">
-        <th>Institution</th><th>Make | Model | Station name</th><th>Date</th>
+<table class="table table-striped" aria-describedby="Summary of studies to delete">
+        <th scope="col">Institution</th><th scope="col">Make | Model | Station name</th><th scope="col">Date</th>
 {% if exam.modality_type == "CT" %}
-        <th>Study description | Accession number</th><th>Number of events</th><th>Dose Length Product Total mGy.cm</th>
+        <th scope="col">Study description | Accession number</th><th scope="col">Number of events</th><th scope="col">Dose Length Product Total mGy.cm</th>
 {% elif exam.modality_type == "RF" %}
-        <th>Study description | Accession number</th><th>Number of events</th><th>DAP Total cGy.cm2</th><th>Dose at RP total Gy</th><th>Physician</th>
+        <th scope="col">Study description | Accession number</th><th scope="col">Number of events</th><th scope="col">DAP Total cGy.cm2</th><th scope="col">Dose at RP total Gy</th><th scope="col">Physician</th>
 {% elif exam.modality_type == "MG" %}
-        <th>Protocol | Accession number</th><th>Number of events</th><th>Laterality</th><th>Accumulated AGD (mGy)</th>
+        <th scope="col">Protocol | Accession number</th><th scope="col">Number of events</th><th scope="col">Laterality</th><th scope="col">Accumulated AGD (mGy)</th>
 {% elif exam.modality_type == "DX" or exam.modality_type == "CR" %}
-        <th>Protocol | Accession number</th><th>Number of events</th><th>DAP Total cGy.cm<sup>2</sup></th>
+        <th scope="col">Protocol | Accession number</th><th scope="col">Number of events</th><th scope="col">DAP Total cGy.cm<sup>2</sup></th>
 {% endif %}
         <tr>
             <td>{{ exam.generalequipmentmoduleattr_set.get.institution_name }}</td>
