Addressing the new SonarCloud issues [skip ci]. Refs issue #886

--- a/openrem/remapp/templates/remapp/displaynameupdate.html
+++ b/openrem/remapp/templates/remapp/displaynameupdate.html
@@ -49,12 +49,12 @@
   {% if admin.admingroup %}
   	  <table aria-describedby="New display name details">
   	  <tr>
-  	  	<td>Enter new display name to be used for all of the above systems:</td>
-  	  	<td><input name="new_display_name" type="text" value="" /></td>
+        <th scope="row">Enter new display name to be used for all of the above systems:</th>
+        <td><input name="new_display_name" type="text" value="" /></td>
   	  </tr>
   	  <tr>
-      	<td>Enter a user defined modality type for all of the above systems:</td>
-      	<td>
+        <th scope="row">Enter a user defined modality type for all of the above systems:</th>
+        <td>
           <select name="new_user_defined_modality">
         	  <option value="">[Leave unchanged]</option>
       		  <option value="DX">DX (planar x-ray)</option>
